--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
       <input type="text" name="pages" id="pages" required><br>
       <label for="read">Read</label>
       <input type="checkbox" name="read" value="yes" id="read"><br>
-      <input type="button" value="Add book" id="submit" onclick="addBook()">
+      <input type="button" value="Add book" id="submit" onclick="library().addBook()">
       </form>
       <div class="right">
         <h1>Books:</h1>
         <div id="books"></div>
       </div>
     </div>
-    <footer>∞made by helan∞</footer>
+    <footer>∞made by <a href="https://github.com/universalwavefunction">helan</a>∞</footer>
   </body>
 </html>
