made book cards same size

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <label for="pages">Pages</label>
       <input type="text" name="pages" id="pages" required><br>
       <label for="read">Read</label>
-      <input type="checkbox" name="read" value="yes" id="read"><br>
+      <input type="checkbox" name="read" value="yes" id="read" float="left"><br>
       <input type="button" value="Add book" id="submit" onclick="library().addBook()">
       </form>
       <div class="right">
